// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login and Registration test if the login form exists: LoginPage 1`] = `
<DocumentFragment>
  <div
    class="ant-row  layout"
  >
    <div
      class="ant-row ant-row-space-between ant-row-middle header"
    >
      <div
        class="ant-col"
      >
        <div
          class="logo"
        >
          <a
            href="/"
          >
            <div
              class="logo-wrapper"
            >
              <img
                alt="/logo-full.png"
                class="small-logo"
                src="/logo-full.png"
              />
            </div>
          </a>
        </div>
      </div>
      <div
        class="ant-col"
      >
        <div
          class="account"
        >
          <a
            href="/login"
          >
            <button
              ant-click-animating-without-extra-node="false"
              class="ant-btn ant-btn-round ant-btn-primary"
              type="button"
            >
              <span>
                Log in
              </span>
            </button>
          </a>
        </div>
      </div>
    </div>
    <div
      class="body"
    >
      <div
        id="login"
      >
        <div
          class="ant-row ant-row-middle wrapper"
        >
          <div
            class="ant-col ant-col-24 right-side"
          >
            <div
              class="login-form-container"
            >
              <img
                alt="login-logo"
                src="./logo192.png"
              />
              <div
                class="login-content"
              >
                <h1>
                  Welcome back
                </h1>
                <p
                  class="contact-text"
                >
                  Please enter your account details 
                  <br />
                   Having trouble accessing the platform? Please 
                  <a
                    href="#"
                  >
                    contact
                  </a>
                  .
                </p>
              </div>
              <form
                class="ant-form ant-form-vertical"
                id="login-form"
              >
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="login-form_email"
                        title="Email Address"
                      >
                        Email Address
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            aria-required="true"
                            class="ant-input"
                            id="login-form_email"
                            placeholder="Email"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="login-form_password"
                        title="Password"
                      >
                        Password
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper ant-input-password"
                          >
                            <input
                              aria-required="true"
                              class="ant-input"
                              id="login-form_password"
                              placeholder="Password"
                              type="password"
                              value=""
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span
                                aria-label="eye-invisible"
                                class="anticon anticon-eye-invisible ant-input-password-icon"
                                role="img"
                                tabindex="-1"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="eye-invisible"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                  />
                                  <path
                                    d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <a
                            class="login-form-forgot"
                            href="/forgot-password"
                          >
                            Recover Password
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <button
                            class="ant-btn ant-btn-round ant-btn-primary"
                            type="submit"
                          >
                            <span>
                              Log in
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <p
                  class="disclaimer"
                >
                  The user is accountable for his/her account and in case there are any changes (Transfers, retirement, any kind of leave, resignation etc) this should be communicated to the County Administrator or National Super Admin who might be able to assign the roles to the new officer.
                </p>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Login and Registration test if the registration form exists: RegistrationPage 1`] = `
<DocumentFragment>
  <div
    class="ant-row  layout"
  >
    <div
      class="ant-row ant-row-space-between ant-row-middle header"
    >
      <div
        class="ant-col"
      >
        <div
          class="logo"
        >
          <a
            href="/"
          >
            <div
              class="logo-wrapper"
            >
              <img
                alt="/logo-full.png"
                class="small-logo"
                src="/logo-full.png"
              />
            </div>
          </a>
        </div>
      </div>
      <div
        class="ant-col"
      >
        <div
          class="account"
        >
          <a
            href="/login"
          >
            <button
              class="ant-btn ant-btn-round ant-btn-primary"
              type="button"
            >
              <span>
                Log in
              </span>
            </button>
          </a>
        </div>
      </div>
    </div>
    <div
      class="body"
    >
      <div
        id="login"
      >
        <div
          class="ant-row ant-row-middle wrapper"
        >
          <div
            class="ant-col ant-col-24 right-side"
          >
            <div>
              <div
                class="login-form-container"
              >
                <div
                  class="login-content"
                >
                  <h1
                    data-testid="welcome-title"
                  >
                    Welcome to the 
                    <b>
                      Test App
                    </b>
                     platform, John Doe
                  </h1>
                  <p
                    class="contact-text"
                  >
                    Please set your password for the platform.
                    <br />
                    Your password must include:
                  </p>
                </div>
                <div
                  class="ant-checkbox-group"
                >
                  <label
                    class="ant-checkbox-wrapper ant-checkbox-group-item"
                  >
                    <span
                      class="ant-checkbox"
                    >
                      <input
                        class="ant-checkbox-input"
                        type="checkbox"
                        value="Lowercase Character"
                      />
                      <span
                        class="ant-checkbox-inner"
                      />
                    </span>
                    <span>
                      Lowercase Character
                    </span>
                  </label>
                  <label
                    class="ant-checkbox-wrapper ant-checkbox-group-item"
                  >
                    <span
                      class="ant-checkbox"
                    >
                      <input
                        class="ant-checkbox-input"
                        type="checkbox"
                        value="Numbers"
                      />
                      <span
                        class="ant-checkbox-inner"
                      />
                    </span>
                    <span>
                      Numbers
                    </span>
                  </label>
                  <label
                    class="ant-checkbox-wrapper ant-checkbox-group-item"
                  >
                    <span
                      class="ant-checkbox"
                    >
                      <input
                        class="ant-checkbox-input"
                        type="checkbox"
                        value="Special Character ( -._!\`'#%&,:;<>=@{}~$()*+/?[]^|] )"
                      />
                      <span
                        class="ant-checkbox-inner"
                      />
                    </span>
                    <span>
                      Special Character ( -._!\`'#%&,:;&lt;&gt;=@{}~$()*+/?[]^|] )
                    </span>
                  </label>
                  <label
                    class="ant-checkbox-wrapper ant-checkbox-group-item"
                  >
                    <span
                      class="ant-checkbox"
                    >
                      <input
                        class="ant-checkbox-input"
                        type="checkbox"
                        value="Uppercase Character"
                      />
                      <span
                        class="ant-checkbox-inner"
                      />
                    </span>
                    <span>
                      Uppercase Character
                    </span>
                  </label>
                  <label
                    class="ant-checkbox-wrapper ant-checkbox-group-item"
                  >
                    <span
                      class="ant-checkbox"
                    >
                      <input
                        class="ant-checkbox-input"
                        type="checkbox"
                        value="No White Space"
                      />
                      <span
                        class="ant-checkbox-inner"
                      />
                    </span>
                    <span>
                      No White Space
                    </span>
                  </label>
                  <label
                    class="ant-checkbox-wrapper ant-checkbox-group-item"
                  >
                    <span
                      class="ant-checkbox"
                    >
                      <input
                        class="ant-checkbox-input"
                        type="checkbox"
                        value="Minimum 8 Characters"
                      />
                      <span
                        class="ant-checkbox-inner"
                      />
                    </span>
                    <span>
                      Minimum 8 Characters
                    </span>
                  </label>
                </div>
                <form
                  class="ant-form ant-form-vertical"
                  id="registration-form"
                >
                  <div
                    class="ant-form-item"
                  >
                    <div
                      class="ant-row ant-form-item-row"
                    >
                      <div
                        class="ant-col ant-form-item-label"
                      >
                        <label
                          class="ant-form-item-required"
                          for="registration-form_password"
                          title="Password"
                        >
                          Password
                        </label>
                      </div>
                      <div
                        class="ant-col ant-form-item-control"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <span
                              class="ant-input-affix-wrapper ant-input-password ant-input-affix-wrapper-has-feedback"
                            >
                              <input
                                aria-required="true"
                                class="ant-input"
                                id="registration-form_password"
                                placeholder="Password"
                                type="password"
                                value=""
                              />
                              <span
                                class="ant-input-suffix"
                              >
                                <span
                                  aria-label="eye-invisible"
                                  class="anticon anticon-eye-invisible ant-input-password-icon"
                                  role="img"
                                  tabindex="-1"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="eye-invisible"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                    />
                                    <path
                                      d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-form-item"
                  >
                    <div
                      class="ant-row ant-form-item-row"
                    >
                      <div
                        class="ant-col ant-form-item-label"
                      >
                        <label
                          class="ant-form-item-required"
                          for="registration-form_confirm"
                          title="Confirm Password"
                        >
                          Confirm Password
                        </label>
                      </div>
                      <div
                        class="ant-col ant-form-item-control"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <span
                              class="ant-input-affix-wrapper ant-input-password ant-input-affix-wrapper-has-feedback"
                            >
                              <input
                                aria-required="true"
                                class="ant-input"
                                id="registration-form_confirm"
                                placeholder="Confirm Password"
                                type="password"
                                value=""
                              />
                              <span
                                class="ant-input-suffix"
                              >
                                <span
                                  aria-label="eye-invisible"
                                  class="anticon anticon-eye-invisible ant-input-password-icon"
                                  role="img"
                                  tabindex="-1"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="eye-invisible"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                    />
                                    <path
                                      d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-form-item"
                  >
                    <div
                      class="ant-row ant-form-item-row"
                    >
                      <div
                        class="ant-col ant-form-item-control"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <button
                              class="ant-btn ant-btn-round ant-btn-primary"
                              type="submit"
                            >
                              <span>
                                Set New Password
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <p
                    class="disclaimer"
                  >
                    The user is accountable for his/her account and in case there are any changes (Transfers, retirement, any kind of leave, resignation etc) this should be communicated to the County Administrator or National Super Admin who might be able to assign the roles to the new officer.
                  </p>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
